# kaggle-home-credit-default-risk

./: .gitignore  README.md  pyproject.toml
conf/base/: parameters.yml
notebooks/: data_understanding.ipynb
notebooks/01_business_understanding/: 01_bu.ipynb
notebooks/02_data_understanding/: 01_du.ipynb
notebooks/04_data_preparation/: dp.ipynb
notebooks/iteration_1/: iter_1_1_data_analysis.ipynb  iter_1_2_feature_processing.ipynb  iter_1_3_modeling.ipynb
src/kaggle_hcdr/: utils.py
