[tool.poetry]
name = "kaggle-home-credit-default-risk"
version = "0.1.0"
description = ""
authors = ["LVBernardes <levb_28@hotmail.com>"]
readme = "README.md"
packages = [{from = "src", include = "kaggle_hcdr"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
